syntax = "proto3";

option go_package = "github.com/lucperkins/colossus/proto/data";
option java_package = "colossus.data";
option java_outer_classname = "Data";

package data;

message DataRequest {
    string request = 1;
}

message DataResponse {
    string value = 1;
}

message EmptyRequest {}

service DataService {
    rpc Get(DataRequest) returns (DataResponse) {}
    rpc StreamingGet(EmptyRequest) returns (stream DataResponse) {}
}